src/objects/LeanData__Persona_Action__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>LeanData__Contact_Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ContactField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead_Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LeadField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Persona_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PersonaName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PersonaAction</label>
</CustomObject>